--- a/rest-client/src/main/resources/templates/fragments/footer.html
+++ b/rest-client/src/main/resources/templates/fragments/footer.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>Footer</title>
+    <link href="theme-default.css" rel="stylesheet" media="screen" th:href="@{/resources/static/theme-default.css}"/>
 </head>
 <body>
+
+<div th:fragment="footer" th:align="center">
+    &copy; <span>2017</span>
+    <span>My Awesome App</span>
+</div>
 
 </body>
 </html>
