--- a/rest-client/src/main/resources/templates/fragments/header.html
+++ b/rest-client/src/main/resources/templates/fragments/header.html
@@ -1,10 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>Header</title>
+    <link href="theme-default.css" rel="stylesheet" media="screen" th:href="@{/resources/static/theme-default.css}"/>
 </head>
 <body>
-
+<nav class="navbar navbar-inverse navbar-fixed-top" th:fragment="header">
+    <div class="container">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".nav-collapse">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#">My project</a>
+        </div>
+    </div>
+</nav>
 </body>
 </html>
