--- a/rest-client/src/main/resources/templates/characterList.html
+++ b/rest-client/src/main/resources/templates/characterList.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
-<!--<html xmlns:th="http://www.thymeleaf.org" th:replace="layouts/default :: layout(~{::body}, 'Characters')">-->
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorator="layouts/default">
 
 <head>
-    <title layout:fragment="title">Characters</title>
+    <title>Characters</title>
 </head>
 
 <body>
