--- a/rest-client/src/main/resources/templates/layouts/default.html
+++ b/rest-client/src/main/resources/templates/layouts/default.html
@@ -2,13 +2,13 @@
 <html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout">
 <head>
 
-    <title layout:fragment="title">Layout</title>
+    <title>Layout</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 
-    <link href="theme-default.css" rel="stylesheet" media="screen" th:href="@{/resources/static/theme-default.css}"/>
+    <link href="theme-default.css" rel="stylesheet" media="screen" th:href="@{theme-default.css}"/>
 
-    <script src="core.js" th:src="@{/resources/static/core.js}"></script>
-    <script src="libs.js" th:src="@{/resources/static/libs.js}"></script>
+    <script src="core.js" th:src="@{core.js}"></script>
+    <script src="libs.js" th:src="@{libs.js}"></script>
 </head>
 <body>
 
