--- a/rest-client/src/main/resources/templates/characterList.html
+++ b/rest-client/src/main/resources/templates/characterList.html
@@ -26,7 +26,7 @@
         <tbody>
         <tr th:each="character : ${characters}">
             <td th:text="${character.id}">Character id</td>
-            <td th:text="${character.name}">Character name</td>
+            <td><a th:href="@{/characters/{id}(id=${character.id})}" th:text="${character.name}">Character name</a></td>
             <td th:text="${character.gender}">Character gender</td>
             <td th:text="${character.culture}">Character culture</td>
             <td th:text="${character.born}">Character born</td>
