--- a/rest-client/src/main/resources/templates/layouts/default.html
+++ b/rest-client/src/main/resources/templates/layouts/default.html
@@ -5,10 +5,10 @@
     <title>Layout</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 
-    <link href="theme-default.css" rel="stylesheet" media="screen" th:href="@{theme-default.css}"/>
+    <link href="/theme-default.css" rel="stylesheet" media="screen" th:href="@{/theme-default.css}"/>
 
-    <script src="core.js" th:src="@{core.js}"></script>
-    <script src="libs.js" th:src="@{libs.js}"></script>
+    <script src="/core.js" th:src="@{/core.js}"></script>
+    <script src="/libs.js" th:src="@{/libs.js}"></script>
 </head>
 <body>
 
